Implement TIMEOUT operation